Fix search input text jumping

--- a/src/components/header/SearchBar.scss
+++ b/src/components/header/SearchBar.scss
@@ -17,18 +17,24 @@
   background-color: #000;
   height: 60px;
 
+  form {
+    width: 100%;
+  }
+
   input {
     background-color: black;
     border-color: black;
     font-size: $font-s;
     color: #fff;
-    margin: 0 5px;
+    margin: 0 0 0 5px;
     padding: 6px 0;
-    width: 100%;
+    width: calc(100% - 10px);
     max-width: 323px;
 
+    // Ensure text doesn't jump on focus.
+    // border-bottom: 2px solid #000;
+
     &:focus {
-      border: none;
       border-bottom: 2px solid #fff;
       outline: none;
     }
@@ -60,6 +66,9 @@
   from { left: 0%; z-index:100; } 
 }
 
+.searchBar__rest {
+  width: 100%;
+}
 
 .searchBar__wrapper {
   max-width: 1360px;
@@ -73,7 +82,7 @@
   align-items: center;
   padding-left: 14px;
   height: 100%;
-  width: 382px;
+  max-width: 384px;
   position: relative;
 }
 
